# personal_agents

./: .gitignore
.github/agents/: bb-agentic-skill.agent.md
argus/: git_sync.py  notify_via_desktop.py  notify_via_email.py  notify_via_slack.py  pyproject.toml
argus/argus_architect/: monitor_prompt.md  notify.py
argus/argus_birthdays/: collect_status.py  monitor_prompt.md
argus/argus_focusmon/: collect_status.py  monitor_prompt.md
argus_common/: .gitignore  auto_git_sync.sh  notify_via_imessage.py  notify_via_whatsapp.py  pyproject.toml  test_gitsync.command
argus_common/argus_architect/: monitor_prompt.md
argus_common/argus_focusmon/: monitor_prompt.md
argus_common/launchd/: ai.bittlebits.shanfomi.gitsync.plist
birthdays/: .gitignore  context.md  migrate.md  pyproject.toml
birthdays/argus/: ARGUS.md
birthdays/argus/src/: collect_status.py
birthdays/code/: birthday_cron.sh  com.claudia.birthday.plist  preprocess.py  send_birthday_messages.py  sync_birthdays.py
birthdays/src/: birthday_cron.sh  postprocess.py  preprocess.py  send_birthday_messages.py
birthdays/src/launchd/: com.claudia.birthday.plist
birthdays/tests/: test_smoke.py
focus_coach_native/: .gitignore  BACKLOG.md  CONTEXT.md  MEMORY.md  plan-context.md
focus_coach_native/app/: .gitignore  README.md  __init__.py  backends.py  config.py  focus_service.py  logwriter.py  pyproject.toml  requirements.txt
focus_coach_native/docs/: prd-A-prototype.md  prd-overall.md
focus_coach_native/macos/: Package.swift  README.md
focus_coach_native/macos/Sources/FocusCapture/: Classifier.swift  Context.swift  FocusCapture.swift
focus_coach_native/tests/: test_logwriter.py
focusmon/: .env.example  .gitignore  crontab.txt
focusmon/argus/: ARGUS.md  monitor_prompt.md
focusmon/argus/src/: collect_status.py  fomi_db.py
focusmon/launchd/: ai.bittlebits.focusmon.daily.plist  ai.bittlebits.focusmon.midday.plist
focusmon/src/: CONTEXT.md  attn_4Hourly.py  attn_daily.py  attn_utils.py  check_fomi.py  log_reader.py  override_hour.py  pyproject.toml  sendEmailReport.py  slack_alert.py
focuss_coach/: plan-context.md
focuss_coach/docs/: prd-overall.md
logistics/: CLAUDIA_MEMORY.md  IMPORT_INSTRUCTIONS.md  SCHEDULED_TASKS_EXPORT.md
shanfomi_fable/: .gitignore  .gitsync_selftest  CONTEXT.md  DESIGN.md  STATUS.md  current  pyproject.toml
shanfomi_fable/app/: Package.swift
shanfomi_fable/app/Sources/FomiCore/: AppDelegate.swift
shanfomi_fable/app/Sources/FomiCore/Rules/: doctor.json  sensitive.json
shanfomi_fable/app/Sources/FomiForMe/: AppDelegate.swift  Classifier.swift  Poller.swift  main.swift
shanfomi_fable/app/Tests/FomiCoreTests/: ClassifierTests.swift
shanfomi_fable/argus/: ARGUS.md
shanfomi_fable/argus/src/: check_health.py
shanfomi_fable/fomi for me/: .env.example  DESIGN.md  Makefile  STATUS.md
shanfomi_fable/fomi for me/app/Sources/FomiForMe/: BrowserURL.swift  Models.swift  RulePack.swift
shanfomi_fable/fomi for me/app/Sources/FomiForMe/Rules/: accountant.json  engineer.json
shanfomi_fable/fomi for me/app/Tests/FomiForMeTests/: ClassifierTests.swift  SessionEngineTests.swift
shanfomi_fable/fomi for me/argus/: ARGUS.md
shanfomi_fable/fomi for me/scripts/: m1_demo.applescript
shanfomi_fable/fomi for me/tests/: test_digest_builder.py
shanfomi_fable/scripts/: build_and_test.command  fix_git_lock.command  verify_db.command
shanfomi_fable/src/: digest_builder.py  fomi4me_db.py
shanfomi_fable/tests/: test_rules.py
shanfomi_fable/v_20260618_232334/: .gitignore  Makefile  README.md  STATUS.md
shanfomi_fable/v_20260618_232334/app/Sources/FomiCore/: EventStore.swift  SessionEngine.swift
shanfomi_fable/v_20260618_232334/app/Tests/FomiCoreTests/: SessionEngineTests.swift
shanfomi_fable/v_20260618_232334/scripts/: m1_demo.sh  make_app.command  run_app.command
shanfomi_fable/v_20260618_232334/src/: digest_builder.py
shanfomi_fable/v_20260618_232334/src/launchd/: ai.bittlebits.fomi4me.digest.plist
shanfomi_fable/v_20260618_232334/tests/: conftest.py  test_fomi4me_db.py  test_rules.py
swiftbar/: focusmon.1m.sh  focusmon_override.sh
