[project]
name = "argus_common"
version = "0.1.0"
description = "Shared notifiers (Slack, email, iMessage, WhatsApp, desktop) + monitor utils for the personal agents."
authors = [{ name = "Amit", email = "engineering@bittlebits.ai" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[tool.poetry]
# Scripts live directly in argus/ rather than an installable package.
package-mode = false

[tool.poetry.group.dev.dependencies]
# ruff = "^0.6"
# pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
