[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "focus-coach-native"
version = "0.1.0"
description = "Focus Coach Native — v0 activity service (prototype brain)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "Pillow>=10.0",
]

[tool.poetry]
package-mode = false

[project.optional-dependencies]
# Optional YOLO object pass. Heavy (pulls torch). Install with:
#   poetry install --extras yolo
yolo = [
    "ultralytics>=8.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
