[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "focusmon"
version = "0.1.0"
description = "Focus monitoring tool with email reporting"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    # macOS-only — used by check_fomi.py to enumerate windows without screenshots.
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    # Notifications go through the shared argus helpers (~/PROJ/ASHANBH/personal_agents/argus).
    # argus/notify_via_slack.py uses `requests`, so focusmon needs it on the path too.
    "requests>=2.31",
]

[tool.poetry]
package-mode = false

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
